2019-01-20 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Calculate propagation of uncertainty using variance formula if interval arithmetic is deactivated
	* Fix randomly activated interval arithmetic (uninitialized variable)

2019-01-19 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Many new physical constants (included particle masses in u and MeV/c^2)
	* Use kg instead g for physical constant to get the correct value when units in constants are disabled
	* Define Planck units as units instead of variables
	* Some atomic units
	* Unit variants of c and reduced Planck constant
	* Support uncertainty in parentheses for units
	* Handle incorrect use of '=' for assignment in for(), and add example

2019-01-12 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Update elements data set (update values and add standard uncertainty to atomic weight)
	* Update planets data set
	* Support uncertainty in parentheses for variables and data objects (e.g. "4.002 602(2)")
	* Add uncertainty and range (in brackets) support for data objects

2019-01-10 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Support UTC+/-hh[:mm] and CET time zone conversion (using "to")
	* Time zone display fixes
	* Support some time zone abbreviations

2019-01-06 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Physcal unit relation constants

2019-01-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix limit((1+\a/x)^x,infinity), and similar

2018-12-31 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Support vectors of conditions and expression in if()
	* Assume false if not true argument in if()

2018-12-30 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* raid() function for RAID capacity calculation

2018-12-23 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Allow "to"-conversion for variable without units

2018-12-17 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use prefixes with litre by defult

2018-12-10 Hanna Knutsson <hanna.knutsson@protonmail.com>
